syntax = "proto3";
package _auth;

message User {
  string id = 1;
  string tag = 2;
  string token = 3;
}

message UserRequest {
  string userTag = 1;
  string pass = 2;
}

message GetUserRequest {
  string token = 1;
}

service AuthService {
  rpc CreateUser(UserRequest) returns (User) {}
  rpc AuthenticateUser(UserRequest) returns (User) {}
  rpc GetUser(GetUserRequest)returns (User) {}
}